Fix text alignment problem on links styled as buttons

--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -103,6 +103,7 @@ nav.navbar {
     padding: 0.75em 1em;
     border: none;
     background-color: var(--primary-color);
+    text-align: center;
     color: #ffffff;
     transition: background-color 200ms;
 }
